fix: values not showing and small improvements

--- a/modules/finance/src/app/app.component.scss
+++ b/modules/finance/src/app/app.component.scss
@@ -1,3 +1,4 @@
 :host {
   display: block;
+  user-select: none;
 }
